@@ -1,0 +1,7 @@
+
+PACKAGE = "Bicho"
+VERSION = "0.4"
+
+# Global options
+quiet = False
+debug = False
